--- a/locust-slave-deployment.yaml
+++ b/locust-slave-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: locust-slave
 spec:
-  replicas: 2  # Adjust the number of replicas based on your requirements
+  replicas: 3
   selector:
     matchLabels:
       app: locust-slave
@@ -16,7 +16,7 @@ spec:
       - name: locust-slave
         image: locustio/locust
         command: ["/bin/sh"]
-        args: ["-c", "locust --worker --master-host=locust-master --host=http://your-app-url"]
+        args: ["-c", "locust --worker --master-host=locust-master --host=https://drm-staging.saavn.com"]
         volumeMounts:
         - mountPath: /locust-tasks
           name: locust-tasks
