--- a/locust-slave-deployment.yaml
+++ b/locust-slave-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: locust-slave
 spec:
-  replicas: 3
+  replicas: 2  # Adjust the number of replicas based on your requirements
   selector:
     matchLabels:
       app: locust-slave
@@ -12,6 +12,10 @@ spec:
       labels:
         app: locust-slave
     spec:
+      volumes:
+      - name: locust-tasks
+        configMap:
+          name: locust-tasks
       containers:
       - name: locust-slave
         image: locustio/locust
@@ -20,7 +24,3 @@ spec:
         volumeMounts:
         - mountPath: /locust-tasks
           name: locust-tasks
-        volumes:
-          - name: locust-tasks
-            configMap:
-              name: locust-tasks
