--- a/locust-master-deployment.yaml
+++ b/locust-master-deployment.yaml
@@ -14,13 +14,11 @@ spec:
     spec:
       containers:
       - name: locust-master
-        image: locustio/locust
-        command: ["/bin/sh"]
-        args: ["-c", "locust -f /locust-tasks/locustfile.py --master --host=https://drm-staging.saavn.com"]
-        volumeMounts:
-        - mountPath: /locust-tasks
-          name: locust-tasks
-      volumes:
-      - name: locust-tasks
-        configMap:
-          name: locust-tasks
+        image: varunregistery02.azurecr.io/locustimagevarun
+        env:
+        - name: LOCUST_MODE
+          value: master
+        - name: LOCUST_FILE
+          value: /mnt/locustfile.py
+        - name: LOCUST_TARGET_URL
+          value: https://drm-staging.saavn.com
