--- a/locust-master-service.yaml
+++ b/locust-master-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: locust-master
+  name: locust-master-service
 spec:
   selector:
     app: locust-master
   ports:
-  - protocol: TCP
-    port: 8089
-    targetPort: 8089
+    - protocol: TCP
+      port: 8089
+      targetPort: 8089
   type: LoadBalancer
